--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -9,12 +9,8 @@
 </head>
 
 <body>
-    <header>
-    </header>
-
-    <footer>
-        <p>Best School</p>
-    </footer>
+    <header></header>
+    <footer><p>Best School</p></footer>
 </body>
 
 </html>
