--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -2,39 +2,18 @@
 <html>
 
 <head>
-    <title>Header and Footer</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #FF0000;
-            height: 70px;
-            width: 100%;
-        }
-
-        footer {
-            background-color: #00FF00;
-            height: 60px;
-            width: 100%;
-            position: fixed;
-            bottom: 0;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
+  <title>Header and Footer</title>
+  <style>
+    body {margin: 0;padding: 0;}
+    header {background-color: #FF0000;height: 70px;width: 100%;}
+    footer {background-color: #00FF00;height: 60px;width: 100%;position: fixed;bottom: 0;
+    text-align: center;display: flex;align-items: center;justify-content: center;}
+  </style>
 </head>
 
 <body>
-    <header>
-    </header>
-     <footer>
-        <p style="margin: 0;">Best School</p>
-    </footer>
+  <header></header>
+  <footer><p style="margin: 0;">Best School</p></footer>
 </body>
 
 </html>
